modify error structure for mongo
